Added support to pass classloader to load extensions so we can load them from the org.epimodel classloader that is used when opening the project creation window to list the available plugins